--- a/package.json
+++ b/package.json
@@ -4,36 +4,50 @@
   "description": "Hardhat Typescript Template for DApps",
   "scripts": {
     "compile": "hardhat compile",
+    "lint": "eslint .",
     "deploy:hardhat": "hardhat run ./scripts/deploy.ts",
     "deploy:rinkeby": "hardhat run ./scripts/deploy.ts --network rinkeby",
     "deploy:mumbai": "hardhat run ./scripts/deploy.ts --network mumbai",
     "test:rinkeby": "hardhat test --network rinkeby",
-    "test:hardhat": "hardhat test"
+    "test:hardhat": "hardhat test",
+    "clean:hardhat": "hardhat clean"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.4",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@typechain/ethers-v5": "^8.0.5",
-    "@typechain/hardhat": "^3.0.0",
-    "@types/mocha": "^9.0.0",
+    "@typechain/hardhat": "^3.1.0",
+    "@types/mocha": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
     "chai": "^4.3.4",
+    "eslint": "8.0.0",
+    "eslint-config-standard-with-typescript": "19.0.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.2",
-    "hardhat": "^2.8.0",
-    "hardhat-gas-reporter": "^1.0.6",
+    "ethers": "^5.5.3",
+    "hardhat": "^2.8.3",
+    "hardhat-gas-reporter": "^1.0.7",
     "mocha": "^9.1.3",
     "solc": "^0.8.9",
-    "solc-0.8.9": "npm:solc@^0.8.9",
-    "solidity-coverage": "^0.7.17",
+    "solc-0.8.9": "npm:solc@^0.8.11",
+    "solidity-coverage": "^0.7.18",
     "ts-node": "^10.4.0",
-    "typechain": "^6.0.5",
-    "typescript": "^4.5.4"
+    "typechain": "^6.1.0",
+    "typescript": "4.1.6"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
     "dotenv": "^10.0.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
