hardhat and eslint conf updated

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "Hardhat Typescript Template for DApps",
   "scripts": {
-    "compile": "hardhat compile",
     "lint": "eslint .",
+    "clean:hardhat": "hardhat clean",
+    "compile": "hardhat compile",
     "deploy:hardhat": "hardhat run ./scripts/deploy.ts",
     "deploy:rinkeby": "hardhat run ./scripts/deploy.ts --network rinkeby",
     "deploy:mumbai": "hardhat run ./scripts/deploy.ts --network mumbai",
     "test:rinkeby": "hardhat test --network rinkeby",
-    "test:hardhat": "hardhat test",
-    "clean:hardhat": "hardhat clean"
+    "test:hardhat": "hardhat test"
   },
   "keywords": [],
   "author": "",
@@ -24,15 +24,16 @@
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "chai": "^4.3.4",
     "eslint": "8.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "19.0.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-config-prettier": "^8.3.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
+    "glob": "^7.2.0",
     "hardhat": "^2.8.3",
     "hardhat-gas-reporter": "^1.0.7",
     "mocha": "^9.1.3",
