--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@typechain/ethers-v5": "^8.0.5",
     "@typechain/hardhat": "^3.1.0",
+    "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "chai": "^4.3.4",
